2008-07-21  Anders Carlsson  <andersca@apple.com>

        Reviewed by Geoff.

        <rdar://problem/5820667> 
        CrashTracer: [USER] 3759 crashes in Safari at FrameLoader::activeDocumentLoader const + 6 while canceling plug-in load

        * http/tests/plugins/geturlnotify-from-npp-destroystream-expected.txt: Added.
        * http/tests/plugins/geturlnotify-from-npp-destroystream.html: Added.

2008-07-21  Rob Buis  <buis@kde.org>

        Reviewed by Mitz.

        Testcase for:
        https://bugs.webkit.org/show_bug.cgi?id=19966
        CSS variables crash when using hex notation for colors

        * fast/css/variables/color-hex-test-expected.txt: Added.
        * fast/css/variables/color-hex-test.html: Added.

2008-07-20  Oliver Hunt  <oliver@apple.com>

        RS=Dan Bernstein.

        Whoops, forgot to commit expected output for this test.

        * fast/js/exception-expression-offset-expected.txt: Added.

2008-07-20  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Oliver.

        Fixes: https://bugs.webkit.org/show_bug.cgi?id=12171

        Remove manual SVG property <-> XML attribute synchronization in SVGPolyElement.
        Added svg/custom/poly-points-attribute-changes.svg (testcase from Rob)

        * platform/mac-leopard/svg/custom/poly-points-attribute-changes-expected.checksum: Added.
        * platform/mac-leopard/svg/custom/poly-points-attribute-changes-expected.png: Added.
        * svg/custom/poly-points-attribute-changes-expected.txt: Added.
        * svg/custom/poly-points-attribute-changes.svg: Added.

2008-07-20  Oliver Hunt  <oliver@apple.com>

        Reviewed by Mark Rowe.

        Add layout test to check correctly handling of exceptions in callback by WebCore.
        Update existing test results for higher fidelity output.

        * fast/dom/NamedNodeMap-setNamedItem-crash-expected.txt:
        * fast/js/exceptions-thrown-in-callbacks-expected.txt: Added.