@@ -1,3 +1,13 @@
+2008-07-21  Alexey Proskuryakov  <ap@webkit.org>
+
+        Reviewed by Dan Bernstein.
+
+        https://bugs.webkit.org/show_bug.cgi?id=20117
+        setBaseAndExtent fails to reverse the current selection
+
+        * editing/selection/setBaseAndExtent-revert-selection-expected.txt: Added.
+        * editing/selection/setBaseAndExtent-revert-selection.html: Added.
+
 2008-07-21  Anders Carlsson  <andersca@apple.com>
 
         Reviewed by Geoff.
